text will  occure on display (web)

--- a/dz 4 traffic light/index.html
+++ b/dz 4 traffic light/index.html
@@ -11,6 +11,7 @@
          <div class="light"></div>
          <div class="light"></div>
       </div>
+      <p class="rule">wait</p>
    </div>
 </body>
 <script src="app.js"></script>
